kubernetes/platform/argocd-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-internal
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.home.shreck.io`)
      kind: Rule
      services:
        - name: argocd-server
          port: 443
      middlewares:
        - name: internal-chain
          namespace: traefik

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-external
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.shreck.io`)
      kind: Rule
      services:
        - name: argocd-server
          port: 443
      middlewares:
        - name: external-chain
          namespace: traefik
  tls:
    secretName: shreck-io-tls
